--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Dorea Data Struct Parser"
 repository = "https://github.com/doreadb/doson/"
 authors = ["ZhuoEr Liu <mrxzx@qq.com>"]
-license = "Apache License 2.0"
+license = "Apache-2.0"
 keywords = ["json","parser","structure"]
 edition = "2018"
 
